--- a/tags.html
+++ b/tags.html
@@ -4,7 +4,7 @@
         <title>Dustin's Website</title>
     </head>
     <body>
-        <h1>Dustin Nguye</h1>
+        <h1>Dustin Nguyen</h1>
         <h2>About Me</h2>
         <p>I was born in Olympia, Washington and have lived here my whole life</p>
         <p>As of now, I'm a student at UW learning from home.</p>
@@ -32,7 +32,7 @@
         </ul>
         <h2>My Favorite Pictures</h2>
         <a href="https://www.reddit.com/r/Genshin_Impact/comments/hnvyez/i_freaked_out/">
-            <img src="https://preview.redd.it/iryv0ntg5r951.jpg?"
+            <img src="https://preview.redd.it/iryv0ntg5r951.jpg?width=960&amp;crop=smart&amp;auto=webp&amp;s=6d6beca5c5e192a99f64f5408cb4f73f8323c556"
             title="Diluc"
             style="width:100px;height:100px;margin:5px">
         </a>
