--- a/tags.html
+++ b/tags.html
@@ -69,7 +69,7 @@
         </fieldset>
         </form>
 
-        <iframe src="https://na.leagueoflegends.com/en-us/" height="200" width="300" title="League of Legends Homepage"></iframe>
+        <iframe src="hhttps://www.washington.edu/" height="200" width="300" title="UW Homepage"></iframe>
         <h1>The canvas element</h1>
 
         <canvas id="myCanvas">Your browser does not support the canvas tag.</canvas>
