--- a/someCss.html
+++ b/someCss.html
@@ -7,7 +7,7 @@ div.a {
 }
 
 div.b {
-  font-size: large;
+  font-size: x-large;
 }
 </style>
 </head>
@@ -35,7 +35,7 @@ div.b {
 div {
     width: 100px;
     height: 100px;
-    background: blue;
+    background: yellow;
     position: relative;
     animation: mymove 1s infinite;
   }
